[GGC-425] fix for Whitelist page to hide scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,7 @@ header {
 
 #root {
   overflow-x: hidden;
-  margin-bottom: -18px;
+  margin-bottom: -21px;
   /*min-height: 100%;
   height: 100%;
   z-index: 10;
